--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+    <!--Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Lato:wght@300&display=swap" rel="stylesheet">
     <!-- Icon -->
     <link rel="stylesheet" type="text/css" href="assets/fonts/line-icons.css">
     <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
@@ -35,7 +39,7 @@
       <!-- Header Area wrapper Starts -->
       <header id="header-wrap">
           <!-- Navbar Start -->
-          <nav class="navbar navbar-expand-lg fixed-top scrolling-navbar">
+          <nav class="navbar navbar-expand-lg scrolling-navbar">
               <div class="container">
                   <!-- Brand and toggle get grouped for better mobile display -->
                   <div class="navbar-header">
@@ -48,18 +52,18 @@
                       <!--<a href="index.html" class="navbar-brand"><img src="assets/img/logo.png" alt=""></a>-->
                   </div>
                   <div class="collapse navbar-collapse" id="main-navbar">
-                      <ul class="navbar-nav mr-auto w-100 justify-content-end">
-                          <li class="nav-item active">
+                      <ul class="navbar-nav w-100 justify-content-center">   <!--class to change-->
+                          <li class="nav-item active borderYtoX">
                               <a class="nav-link" href="#header-wrap">
                                   Home
                               </a>
                           </li>
-                          <li class="nav-item">
+                          <li class="nav-item borderYtoX">
                               <a class="nav-link" href="#about">
                                   Events
                               </a>
                           </li>
-                          <li class="nav-item">
+                          <li class="nav-item borderYtoX">
                               <a class="nav-link" href="#schedules">
                                   Schedules
                               </a>
@@ -71,17 +75,17 @@
                             </a>
                           </li>
                         -->
-                          <li class="nav-item">
+                          <li class="nav-item borderYtoX">
                               <a class="nav-link" href="#gallery">
                                   Gallery
                               </a>
                           </li>
-                          <li class="nav-item">
+                          <li class="nav-item borderYtoX">
                               <a class="nav-link" href="#faq">
                                   Faq
                               </a>
                           </li>
-                          <li class="nav-item">
+                          <li class="nav-item borderYtoX">
                               <a class="nav-link" href="#sponsors">
                                   Sponsors
                               </a>
@@ -92,12 +96,6 @@
                               register
                             </a>
                           </li> -->
-
-                          <li class="nav-item">
-                              <a class="nav-link" href="#google-map-area">
-                                  Contact
-                              </a>
-                          </li>
                       </ul>
                   </div>
               </div>
@@ -132,14 +130,14 @@
                     <a class="page-scroll" href="#register">Register</a>
                   </li> -->
 
-                  <li>
-                      <a class="page-scroll" href="#google-map-area">Contact</a>
-                  </li>
               </ul>
               <!-- Mobile Menu End -->
 
           </nav>
           <!-- Navbar End -->
+
+
+
           <!-- Main Carousel Section Start -->
           <div id="main-slide" class="carousel slide" data-ride="carousel">
 
